--- a/menu_test.html
+++ b/menu_test.html
@@ -169,8 +169,13 @@
          Pere Magloire Fine V.S
         </a>
         <span>
-         500
+         ₽500
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-calvados">
@@ -179,8 +184,13 @@
          Pomme de Victor
         </a>
         <span>
-         300
+         ₽300
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-cognac">
@@ -196,7 +206,7 @@
          Старейшина 3 года
         </a>
         <span>
-         150
+         ₽150
         </span>
        </div>
       </div>
@@ -206,7 +216,7 @@
          Кальвадос Помм Де Виктор
         </a>
         <span>
-         150
+         ₽150
         </span>
        </div>
       </div>
@@ -216,7 +226,7 @@
          Жак Де Ла Круа
         </a>
         <span>
-         150
+         ₽150
         </span>
        </div>
       </div>
@@ -226,8 +236,13 @@
          Рулле ВСОП
         </a>
         <span>
-         540
+         ₽540
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-cognac">
@@ -236,8 +251,13 @@
          Брюннель Наполеон VSOP
         </a>
         <span>
-         240
+         ₽240
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
@@ -253,7 +273,7 @@
          Абсент Оазис
         </a>
         <span>
-         150
+         ₽150
         </span>
        </div>
       </div>
@@ -263,7 +283,7 @@
          Тундра Битер
         </a>
         <span>
-         150
+         ₽150
         </span>
        </div>
       </div>
@@ -273,7 +293,7 @@
          Тундра Битер Минт
         </a>
         <span>
-         150
+         ₽150
         </span>
        </div>
       </div>
@@ -283,7 +303,7 @@
          Аппероль
         </a>
         <span>
-         180
+         ₽180
         </span>
        </div>
       </div>
@@ -293,7 +313,7 @@
          Мартини Экстра Драй
         </a>
         <span>
-         150
+         ₽150
         </span>
        </div>
       </div>
@@ -303,7 +323,7 @@
          Тундра Битер Оранж
         </a>
         <span>
-         150
+         ₽150
         </span>
        </div>
       </div>
@@ -313,7 +333,7 @@
          Самбука Нива
         </a>
         <span>
-         150
+         ₽150
         </span>
        </div>
       </div>
@@ -323,8 +343,13 @@
          Аперетиво
         </a>
         <span>
-         100
+         ₽100
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-liqueurs-aperitifs">
@@ -333,8 +358,13 @@
          Limonica Sambuca Extra
         </a>
         <span>
-         160
+         ₽160
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-coffee">
@@ -350,7 +380,7 @@
          Чай
         </a>
         <span>
-         70
+         ₽70
         </span>
        </div>
       </div>
@@ -360,7 +390,7 @@
          Латте
         </a>
         <span>
-         120
+         ₽120
         </span>
        </div>
       </div>
@@ -370,7 +400,7 @@
          Капучино
         </a>
         <span>
-         100
+         ₽100
         </span>
        </div>
       </div>
@@ -380,7 +410,7 @@
          Американо
         </a>
         <span>
-         50
+         ₽50
         </span>
        </div>
       </div>
@@ -390,7 +420,7 @@
          Эспрессо
         </a>
         <span>
-         50
+         ₽50
         </span>
        </div>
       </div>
@@ -407,8 +437,13 @@
          Арахис
         </a>
         <span>
-         150
+         ₽150
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         100 гр
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-kitchen">
@@ -417,8 +452,13 @@
          Брускет с паштетом 4шт
         </a>
         <span>
-         250
+         ₽250
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         180-200гр
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-kitchen">
@@ -427,7 +467,7 @@
          Вяленное мясо
         </a>
         <span>
-         350
+         ₽350
         </span>
        </div>
       </div>
@@ -437,7 +477,7 @@
          Говядина Вяленное мясо
         </a>
         <span>
-         250
+         ₽250
         </span>
        </div>
       </div>
@@ -447,7 +487,7 @@
          Курица Вяленное мясо
         </a>
         <span>
-         300
+         ₽300
         </span>
        </div>
       </div>
@@ -457,7 +497,7 @@
          Свинина
         </a>
         <span>
-         ??
+         ₽                 ??
         </span>
        </div>
       </div>
@@ -467,8 +507,13 @@
          Гренки с моцарелла 8 шт
         </a>
         <span>
-         150
+         ₽150
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         250 гр
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-kitchen">
@@ -477,8 +522,13 @@
          Фри
         </a>
         <span>
-         100
+         ₽100
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         100 гр
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-kitchen">
@@ -487,8 +537,13 @@
          Айдахо
         </a>
         <span>
-         120
+         ₽120
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         100 гр
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-kitchen">
@@ -497,7 +552,7 @@
          Крылья Баффало 7шт
         </a>
         <span>
-         320
+         ₽320
         </span>
        </div>
       </div>
@@ -507,7 +562,7 @@
          Ножки 3шт
         </a>
         <span>
-         320
+         ₽320
         </span>
        </div>
       </div>
@@ -517,7 +572,7 @@
          Купаты 2шт
         </a>
         <span>
-         390
+         ₽390
         </span>
        </div>
       </div>
@@ -527,7 +582,7 @@
          Наггетсы 6шт
         </a>
         <span>
-         130
+         ₽130
         </span>
        </div>
       </div>
@@ -537,8 +592,13 @@
          Паутинка с мясом
         </a>
         <span>
-         300
+         ₽300
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         220 гр
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-kitchen">
@@ -547,8 +607,13 @@
          Пельмени
         </a>
         <span>
-         150
+         ₽150
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         100 гр
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-kitchen">
@@ -557,8 +622,13 @@
          Сало два вида
         </a>
         <span>
-         250
+         ₽250
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         60 гр
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-kitchen">
@@ -567,8 +637,13 @@
          Сыр косичка
         </a>
         <span>
-         200
+         ₽200
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         100 гр
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-kitchen">
@@ -577,8 +652,13 @@
          Фисташки
         </a>
         <span>
-         250
+         ₽250
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         100 гр
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-beer">
@@ -594,7 +674,7 @@
          IPA
         </a>
         <span>
-         260
+         ₽260
         </span>
        </div>
       </div>
@@ -604,8 +684,13 @@
          Лагер Тельман
         </a>
         <span>
-         220
+         ₽220
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         0,5 л
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-beer">
@@ -614,7 +699,7 @@
          Крафт банка
         </a>
         <span>
-         350
+         ₽350
         </span>
        </div>
       </div>
@@ -624,8 +709,13 @@
          Peterhof
         </a>
         <span>
-         150
+         ₽150
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         0,5 л
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-beer">
@@ -634,8 +724,13 @@
          Черничный страут
         </a>
         <span>
-         240
+         ₽240
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         0,5 л
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-beer">
@@ -644,7 +739,7 @@
          Томатный Гозе
         </a>
         <span>
-         250
+         ₽250
         </span>
        </div>
       </div>
@@ -661,7 +756,7 @@
          Шато Тамань Белое
         </a>
         <span>
-         280
+         ₽280
         </span>
        </div>
       </div>
@@ -671,7 +766,7 @@
          Шато Тамань Игристое
         </a>
         <span>
-         250
+         ₽250
         </span>
        </div>
       </div>
@@ -681,7 +776,7 @@
          Шато Тамань Розовое
         </a>
         <span>
-         280
+         ₽280
         </span>
        </div>
       </div>
@@ -698,8 +793,13 @@
          ADRENALINE Rush
         </a>
         <span>
-         150
+         ₽150
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         0,5 л
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-Soft-drinks">
@@ -708,8 +808,13 @@
          AQUA MINERALE
         </a>
         <span>
-         80
+         ₽80
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         0,5 л
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-Soft-drinks">
@@ -718,7 +823,7 @@
          ЛИМОНАД
         </a>
         <span>
-         55
+         ₽55
         </span>
        </div>
       </div>
@@ -728,7 +833,7 @@
          Напиток "Кока-кола"
         </a>
         <span>
-         440
+         ₽440
         </span>
        </div>
       </div>
@@ -738,7 +843,7 @@
          Топпинг
         </a>
         <span>
-         35
+         ₽35
         </span>
        </div>
       </div>
@@ -748,7 +853,7 @@
          Тоник
         </a>
         <span>
-         300
+         ₽300
         </span>
        </div>
       </div>
@@ -758,7 +863,7 @@
          Сок
         </a>
         <span>
-         400
+         ₽400
         </span>
        </div>
       </div>
@@ -775,8 +880,13 @@
          Пачука Сильвер
         </a>
         <span>
-         180
+         ₽180
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-tequila">
@@ -785,8 +895,13 @@
          Текила сильвер NEWTON
         </a>
         <span>
-         200
+         ₽200
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-rum">
@@ -802,7 +917,7 @@
          Олд Монк Выдержанный
         </a>
         <span>
-         200
+         ₽200
         </span>
        </div>
       </div>
@@ -812,7 +927,7 @@
          Олд Монк Белый
         </a>
         <span>
-         170
+         ₽170
         </span>
        </div>
       </div>
@@ -822,8 +937,13 @@
          РОМ ЭЛЕ БОКО БЛЕК
         </a>
         <span>
-         160
+         ₽160
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-rum">
@@ -832,8 +952,13 @@
          РОМ ЭЛЕ БОКО ВАЙТ
         </a>
         <span>
-         160
+         ₽160
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-whiskey">
@@ -849,7 +974,7 @@
          Джим Бим
         </a>
         <span>
-         250
+         ₽250
         </span>
        </div>
       </div>
@@ -859,7 +984,7 @@
          Джим Бим Ред Стаг
         </a>
         <span>
-         250
+         ₽250
         </span>
        </div>
       </div>
@@ -869,7 +994,7 @@
          Джим Бим Хани
         </a>
         <span>
-         250
+         ₽250
         </span>
        </div>
       </div>
@@ -879,7 +1004,7 @@
          Джим Бим Эппл
         </a>
         <span>
-         250
+         ₽250
         </span>
        </div>
       </div>
@@ -889,8 +1014,13 @@
          Blend
         </a>
         <span>
-         180
+         ₽180
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-whiskey">
@@ -899,8 +1029,13 @@
          GlenDale
         </a>
         <span>
-         230
+         ₽230
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-whiskey">
@@ -909,8 +1044,13 @@
          William Watt
         </a>
         <span>
-         150
+         ₽150
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-whiskey">
@@ -919,8 +1059,13 @@
          КЕНТУКИ БОУТ
         </a>
         <span>
-         230
+         ₽230
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-whiskey">
@@ -929,8 +1074,13 @@
          МАК ДУКАН МЁД
         </a>
         <span>
-         100
+         ₽100
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-whiskey">
@@ -939,8 +1089,13 @@
          Royal Hunt
         </a>
         <span>
-         150
+         ₽150
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-vodka">
@@ -956,8 +1111,13 @@
          Настойка
         </a>
         <span>
-         150
+         ₽150
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         150 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-vodka">
@@ -966,7 +1126,7 @@
          Самагон
         </a>
         <span>
-         150
+         ₽150
         </span>
        </div>
       </div>
@@ -976,7 +1136,7 @@
          Царская Золотая
         </a>
         <span>
-         120
+         ₽120
         </span>
        </div>
       </div>
@@ -986,7 +1146,7 @@
          Царская Ориг
         </a>
         <span>
-         100
+         ₽100
         </span>
        </div>
       </div>
@@ -996,8 +1156,13 @@
          ЦАРСКАЯ ГРУША
         </a>
         <span>
-         130
+         ₽130
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-vodka">
@@ -1006,8 +1171,13 @@
          Царская грейпфрут
         </a>
         <span>
-         130
+         ₽130
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-vodka">
@@ -1016,8 +1186,13 @@
          ЦАРСКАЯ СЕЛО
         </a>
         <span>
-         130
+         ₽130
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-vodka">
@@ -1026,8 +1201,13 @@
          ЦАРСКАЯ ЦИТРОН
         </a>
         <span>
-         130
+         ₽130
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-vodka">
@@ -1036,8 +1216,13 @@
          ЦАРСКАЯ МАЛИНА
         </a>
         <span>
-         130
+         ₽130
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-vodka">
@@ -1046,8 +1231,13 @@
          ЦАРСКАЯ КЛЮКВЕННАЯ
         </a>
         <span>
-         130
+         ₽130
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
       <div class="col-lg-6 menu-item filter-vodka">
@@ -1056,8 +1246,13 @@
          Чайковский водка
         </a>
         <span>
-         150
+         ₽150
         </span>
+       </div>
+       <div class="menu-size">
+        <a>
+         50 мл
+        </a>
        </div>
       </div>
      </div>
