--- a/menu_test.html
+++ b/menu_test.html
@@ -116,41 +116,44 @@
         <li class="filter-active" data-filter="*">
          Всё
         </li>
-        <li data-filter=".filter-liqueurs-aperitifs">
-         Ликёры / Аперетивы
-        </li>
-        <li data-filter=".filter-soft-drinks">
-         Без алкогольные напитки
-        </li>
-        <li data-filter=".filter-whiskey">
-         Виски
-        </li>
-        <li data-filter=".filter-vodka">
-         Водка
-        </li>
         <li data-filter=".filter-calvados">
          Кальвадос
         </li>
         <li data-filter=".filter-cognac">
          Коньяк
         </li>
+        <li data-filter=".filter-liqueurs-aperitifs">
+         Аперетивы / Ликер
+        </li>
+        <li data-filter=".filter-coffee">
+         Кофе ☕️
+        </li>
         <li data-filter=".filter-kitchen">
-         Кухня
+         Кухня 🥘
         </li>
         <li data-filter=".filter-beer">
-         Пиво
+         Пиво 🍺
+        </li>
+        <li data-filter=".filter-champagne">
+         Шампанское 🍾
+        </li>
+        <li data-filter=".filter-soft-drinks">
+         Безалкогольные напитки
+        </li>
+        <li data-filter=".filter-tequila">
+         Текила 🌵
         </li>
         <li data-filter=".filter-rum">
          Ром
         </li>
-        <li data-filter=".filter-tequila">
-         Текила
+        <li data-filter=".filter-whiskey">
+         Виски 🥃
         </li>
-        <li data-filter=".filter-coffee">
-         Кофе
+        <li data-filter=".filter-vodka">
+         Водка
         </li>
-        <li data-filter=".filter-champagne">
-         Шампанское
+        <li data-filter=".filter-New">
+         Новая категория
         </li>
        </ul>
       </div>
@@ -1499,6 +1502,104 @@
        </div>
        <div class="menu-ingredients">
         Описание 82
+       </div>
+      </div>
+      <div class="col-lg-6 menu-item filter-New">
+       <div class="menu-sections">
+        <h2>
+         Новая категория
+        </h2>
+       </div>
+      </div>
+      <div class="col-lg-6 menu-item filter-New">
+       <div class="menu-content">
+        <a>
+         Новая позиция 1
+        </a>
+        <span>
+         ₽404
+        </span>
+       </div>
+       <div class="menu-ingredients">
+        Описание 83
+       </div>
+      </div>
+      <div class="col-lg-6 menu-item filter-New">
+       <div class="menu-content">
+        <a>
+         Новая позиция 2
+        </a>
+        <span>
+         ₽404
+        </span>
+       </div>
+       <div class="menu-ingredients">
+        Описание 84
+       </div>
+      </div>
+      <div class="col-lg-6 menu-item filter-New">
+       <div class="menu-content">
+        <a>
+         Новая позиция 3
+        </a>
+        <span>
+         ₽404
+        </span>
+       </div>
+       <div class="menu-ingredients">
+        Описание 85
+       </div>
+      </div>
+      <div class="col-lg-6 menu-item filter-New">
+       <div class="menu-content">
+        <a>
+         Новая позиция 4
+        </a>
+        <span>
+         ₽404
+        </span>
+       </div>
+       <div class="menu-ingredients">
+        Описание 86
+       </div>
+      </div>
+      <div class="col-lg-6 menu-item filter-New">
+       <div class="menu-content">
+        <a>
+         Новая позиция 5
+        </a>
+        <span>
+         ₽404
+        </span>
+       </div>
+       <div class="menu-ingredients">
+        Описание 87
+       </div>
+      </div>
+      <div class="col-lg-6 menu-item filter-New">
+       <div class="menu-content">
+        <a>
+         Новая позиция 6
+        </a>
+        <span>
+         ₽404
+        </span>
+       </div>
+       <div class="menu-ingredients">
+        Описание 88
+       </div>
+      </div>
+      <div class="col-lg-6 menu-item filter-New">
+       <div class="menu-content">
+        <a>
+         Новая позиция 7
+        </a>
+        <span>
+         ₽404
+        </span>
+       </div>
+       <div class="menu-ingredients">
+        Описание 89
        </div>
       </div>
      </div>
